--- a/ensinofundamental/geografia.html
+++ b/ensinofundamental/geografia.html
@@ -1,10 +1,57 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecione o Ano</title>
-    <link rel="stylesheet" href="../css/styles.css">
+
+    <!-- CSS embutido -->
+    <style>
+        /* Estilo para o corpo */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+
+        /* Estilo para o título */
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+
+        /* Estilo para a tabela */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+
+        /* Estilo para as células da tabela */
+        td, th {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+
+        /* Estilo para os links */
+        a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+
+        /* Estilo para os links ao passar o mouse */
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Estilo para o cabeçalho da tabela */
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
 
@@ -13,21 +60,18 @@
 <table>
     <tbody>
         <tr>
-<h1 style="color: #5e9ca0;">Selecione o ano desejado da mat&eacute;ria:</h1>
-<table style="border-collapse: collapse; width: 100%;" border="1">
-<tbody>
-<tr>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/primeiroano.html">Primeiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/segundoano.html">Segundo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/terceiroano.html">Terceiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/quartoano.html">Quarto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/quintoano.html">Quinto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/sextoano.html">Sexto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/setimoano.html">S&eacute;timo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/oitavoano.html">Oitavo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/geografia/nonoano.html">Nono</a></td>
-</tr>
-</tbody>
+            <td><a href="./p1f/p3f.pdf">Primeiro</a></td>
+            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
+            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
+            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
+            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
+            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
+            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
+            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
+            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+        </tr>
+    </tbody>
 </table>
+
 </body>
 </html>
