--- a/ensinofundamental/educacaofisica.html
+++ b/ensinofundamental/educacaofisica.html
@@ -61,14 +61,14 @@
     <tbody>
         <tr>
             <td><a href="./p1f/pS2f.pdf">Primeiro</a></td>
-            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
-            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
-            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
-            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
-            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p2dv.pdf">Segundo</a></td>
+            <td><a href="./p1f/p2f4f.pdf">Terceiro</a></td>
+            <td><a href="./p1f/p2anl.pdf">Quarto</a></td>
+            <td><a href="./p1f/p2nv2.pdf">Quinto</a></td>
+            <td><a href="./p1f/p2fcv.pdf">Sexto</a></td>
+            <td><a href="./p1f/p2ev2.pdf">Sétimo</a></td>
+            <td><a href="./p1f/p2f6d.pdf">Oitavo</a></td>
+            <td><a href="./p1f/p23fv2.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
